Fixed tooltip display, overlapping issues, etc

--- a/css/drumCircles.css
+++ b/css/drumCircles.css
@@ -171,7 +171,15 @@ p {
 }
 
 .aligned {
-    box-shadow: inset 0 0 14px red;
+    box-shadow: inset 0 0 20px red;
+}
+
+.alignedD1 {
+    box-shadow: inset 0 0 20px blue;
+}
+
+.alignedD2 {
+    box-shadow: inset 0 0 20px green;
 }
 
 .pos1 {
